_sass/_type.scss
@font-face {
    font-family: 'Ampersand';
    src: local('Baskerville'), local('Palatino'), local('Book Antiqua');
    unicode-range: U+26;
}
@font-face {
    /* Ampersand fallback font */
    font-family: 'Ampersand';
    src: local('Arial');
    unicode-range: U+270C;
}

%font-copy {
	font-family: 'Open Sans', sans-serif;
	font-weight: 300; 
}

%font-title {
	font-family: Ampersand, 'Alegreya Sans SC', sans-serif;
	font-weight: 900; 
}

%font-blockquote {
	font-family: Ampersand, 'Alegreya Sans SC', sans-serif;
	font-weight: 400; 
}

.uppercase,
%uppercase {
	text-transform: uppercase;
}

.lowercase,
%lowercase {
	text-transform: lowercase;
}


%white,
.white {
	color: white;
}

%orange,
.orange {
	color: $color--orange;

	a {
		color: $color--orange;
		&:hover {
			color: white;
			background-color: $color--orange;
		}
	}
	
	.cs--inverted {
		background-color: $color--orange;
		@extend %white;
	}
	p span {
		border-bottom: 1px solid $color--orange;
	}

	blockquote span {
		color: $color--orange;
	}
}

%gold,
.gold {
	color: $color--gold;

	a {
		color: $color--gold;
		&:hover {
			color: white;
			background-color: $color--gold;
		}
	}
	
	.cs--inverted {
		background-color: $color--gold;
		@extend %white;
	}
	p span {
		border-bottom: 1px solid $color--gold;
	}

	blockquote span {
		color: $color--gold;
	}
}

%blue,
.blue {
	color: $color--blue;

	a {
		color: $color--blue;
		&:hover {
			color: white;
			background-color: $color--blue;
		}
	}
	
	.cs--inverted {
		background-color: $color--blue;
		@extend %white;
	}
	p span {
		border-bottom: 1px solid $color--blue;
	}

	blockquote span {
		color: $color--blue;
	}
}

body {
	@extend %font-copy;
	font-size: 16px;
}

h1,
h2,
h3 {
	@extend %font-title;
}

h1 {
	@include fontsize(48);
	
	@include breakpoint($tab-horiz) {
		@include fontsize(42);
	}
	@include breakpoint($small-tab) {
		@include fontsize(36);
	}
	@include breakpoint($phone-horiz) {
		@include fontsize(28);
	}
}

blockquote {
	@extend %font-blockquote;
	@include fontsize(24);
	max-width: 800px;
	margin: 1.5em 0;
	color: $color--copy--dark;
	
	&:not(.push) {
		position: relative;
		z-index: 2;
		margin-bottom: -1.5em;
	}
}

%center-contain,
.center-contain {
	text-align: center;
}

.cs--inverted {
	margin: 1em auto 1.5em;
	display: inline-block;
	padding: 0.2em 0.5em;
}

a {
	@include transition-duration(0.5s);
	text-decoration: none;
	padding: 0 0.2em;
}

h2 {
	@include fontsize(42);
}

p {
	color: $color--copy;
}

h3 {
	@include fontsize(16);
	line-height: 2;
	color: white;
	z-index: 2;
	position: relative;
	
	.marked {
		@extend %font-copy;
		@include fontsize(12);
		color: $color--copy;
		
		@include breakpoint($tab-horiz) {
			@include fontsize(8);
		}
		@include breakpoint($phone-horiz) {
			@include fontsize(6);
		}
	}

	@include breakpoint($tab-horiz) {
		@include fontsize(12);
	}
	@include breakpoint($phone-horiz) {
		@include fontsize(10);
	}
}

small {
	font-size: 60%;
	color: $color--copy;
	@extend %font-copy; 
}

